# 36_QSDFT

./: .gitignore  AdsorptionDataPlotter.py  Neimark2009_QSDFT_Supplement.doc  Readme.md  adsorption_data.txt  data_out.csv  mail.py  plot_test_data.py  pyproject.toml  requirements.txt
input/: data_in.csv
scripts/: toexe.sh  venv_pip.sh
src/: AdsorptionDataPlotter.py  mail.py  main.py  qsdft.py
