[project]
name = "qsdft"
dynamic = ["version"]
description = "QSDFT"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    {name = "sanja_s", email = "sanja100v@gmail.com"}
]

dependencies = [
    "matplotlib>=3.6.3",
    "numpy>=1.24.1",
    "scipy>=1.9.0",
]

[project.urls]
Repository = "https://github.com/sanjas12/36_QSDFT.git"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# [dependency-groups]
# build = [
#     "cx-freeze==7.2.10 ; sys_platform == 'win32'",
# ]

[tool.uv]
environments = [
    "sys_platform == 'win32'",
    # "sys_platform == 'linux'",  # раскоментить если будет в linux собираться
]

[tool.setuptools.packages.find]
where = ["src"]

# ─── Ruff: линтер + форматер ─────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "N",
    "SIM",  
]
ignore = ["E501"] 

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
